docs(benchmarks): add golden-corpus best-vs-best, fix the unfair JNI framing
The synthetic tables compared our zero-copy MemorySegment path against zstd-jni's
*allocating* byte[] API — our best vs their worst — which inflated both the speed
edge and the "allocation-free vs JNI" claim. Add a Golden corpus: best vs best
section (our MemorySegment vs zstd-jni's own direct-ByteBuffer zero-copy path,
same zstd 1.5.7, 3x3x5 + gc): allocation ties at ~0 B/op, throughput leads +9-10%
compress / +23% small decompress and ties on large decompress — the expected
FFM call-overhead shape.

Rewrite the TL;DR to separate the two comparisons honestly, note zstd-jni's
zero-copy mode in the contestant table, correct the environment block (same zstd
version both sides; corpus run is publication-grade, synthetic is directional),
and add the corpus reproduce command.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>